# table-agent-toolkit

./: .gitignore  README.md  adult-sampled.csv  pyproject.toml
scripts/: deploy.sh  install-local.sh  install.sh  quick-install.sh
src/table_agent_toolkit/: __main__.py  server.py  setup_cmd.py
src/table_agent_toolkit/skills/: describe-table.md
src/table_agent_toolkit/synthetic_generation/: __init__.py  generators.py  tabicl_sampler.py
tests/: test_generators.py  test_server.py
